chore: update VSCode settings for JSON formatting and streamline keywords in package.json

--- a/package.json
+++ b/package.json
@@ -1,13 +1,7 @@
 {
   "name": "pino-transport-rotating",
   "description": "Plugin for pino to transport logs to rotating files",
-  "keywords": [
-    "pino",
-    "transport",
-    "rotating",
-    "file",
-    "log"
-  ],
+  "keywords": ["pino", "transport", "rotating", "file", "log"],
   "version": "1.0.2",
   "license": "MIT",
   "author": {
