feat: update log rotation settings and improve type definitions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -109,6 +109,9 @@
       "fileMatch": ["package.json", "tsup.config.json"]
     }
   ],
+  "[typescript]": {
+    "editor.defaultFormatter": "biomejs.biome"
+  },
   "[json]": {
     "editor.defaultFormatter": "biomejs.biome"
   }
