--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pino-transport-rotating",
   "description": "Plugin for pino to transport logs to rotating files",
   "keywords": ["pino", "transport", "rotating", "file", "log"],
-  "version": "1.0.2",
+  "version": "1.1.0-rc.6",
   "license": "MIT",
   "author": {
     "name": "Mohammad Abu Mattar",
@@ -32,14 +32,10 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
-    "@rollup/plugin-terser": "0.4.4",
     "@rollup/plugin-typescript": "12.1.1",
-    "@types/cors": "2.8.17",
     "@types/node": "22.10.1",
-    "@vitest/coverage-v8": "2.1.8",
     "rimraf": "6.0.1",
     "rollup": "4.28.1",
-    "terser": "5.37.0",
     "tslib": "2.8.1",
     "typescript": "5.7.2"
   },
