--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -25,7 +25,7 @@ jobs:
       fail-fast: false
       matrix:
         language:
-          - TypeScript
+          - javascript-typescript
 
     steps:
       - name: Checkout
