feat: improve logging configuration in README

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -114,5 +114,8 @@
   },
   "[json]": {
     "editor.defaultFormatter": "biomejs.biome"
+  },
+  "[properties]": {
+    "editor.defaultFormatter": "foxundermoon.shell-format"
   }
 }
